--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -12,12 +12,13 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:minWidth="48dp"
-        android:minHeight="48dp"
+        android:minWidth="28dp"
+        android:minHeight="28dp"
         android:onClick="clickMenu"
         android:src="@drawable/ic_menu" />
 
     <TextView
+        android:id="@+id/tv_toolbarText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/navigatorText"
@@ -25,14 +26,13 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:textAlignment="center"
-
         android:textColor="@color/white" />
 
 
     <ImageView
-        android:layout_width="75dp"
-        android:layout_height="30dp"
-        android:src="@drawable/billing"/>
+        android:layout_width="89dp"
+        android:layout_height="40dp"
+        android:src="@drawable/billing" />
 
 
 
