--- a/app/src/main/res/layout/addbill.xml
+++ b/app/src/main/res/layout/addbill.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".After_Login.New_Bill"
+    tools:context=".Display_Interface.New_Bill"
     android:id="@+id/drawer_layout">
 
 
